--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: workshop-upload
+      - name: Upload to Steam Workshop
         uses: weilbyte/steam-workshop-upload@v1
         with: 
           appid: 294100
@@ -19,3 +19,18 @@ jobs:
           STEAM_USERNAME: ${{ secrets.STEAM_USERNAME }}
           STEAM_PASSWORD: ${{ secrets.STEAM_PASSWORD }}
           STEAM_TFASEED: ${{ secrets.STEAM_TFASEED }}
+      - name: Rename folder
+        run: mv dist RWRichPresence
+      - name: Package folder
+        uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r out.zip RWRichPresence
+      - name: Upload to release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./out.zip
+          asset_name: RWRichPresence.zip
+          asset_content_type: application/zip
